# ARC-robustness

./: .gitignore  README.md  pyproject.toml
features/full/: labels.npy
notebooks/: initial_visiulations.ipynb
scripts/: run_training.py  visualise_manifold.py
src/arc-robustness/training/: extract_features.py  model.py  train_base_model.py
src/arc-robustness/visualisation/: visualise.py
src/arc_robustness/training/: model.py  train_base_model.py
src/arc_robustness/visualisation/: extract_features.py
weights/: base_model.pt
